--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
 django-filter==22.1
 djangorestframework==3.14.0
+gunicorn==20.1.0
 mysqlclient==2.1.1
 pytz==2022.6
 sqlparse==0.4.3
